--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.1",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.2.4",
-    "react-router-dom": "^7.9.5"
+    "react-masonry-css": "^1.0.16",
+    "react-paginate": "^8.3.0",
+    "react-router-dom": "^7.9.5",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
