--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-i18next": "^16.2.4",
     "react-masonry-css": "^1.0.16",
     "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.9.5",
-    "swiper": "^12.0.3"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
