--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.1",
     "lucide-react": "^0.553.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.2.4",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react-swc": "^4.1.0",
